syntax = "proto3";

package metric;

option go_package = "internal/proto/metric.proto";

message Metric {
    string id = 1;
    string type = 2;
    sfixed64 delta = 3;
    double value =  4;
}

message BatchUpdateRequest {
    repeated Metric metric = 1;
}

message BatchUpdateResponse {
    string error = 1;
}

service MetricsService {
    rpc BatchUpdate(BatchUpdateRequest) returns (BatchUpdateResponse) {}
}